Fix end game symbol on iOS

--- a/style.scss
+++ b/style.scss
@@ -65,6 +65,7 @@ html, body {
   padding: 5px 10px 10px 20px;
   border-radius: 0 0 0 20px;
   color: white;
+  font-weight: bold;
 }
 #finalScore {
   background: url("images/bg.jpg");
